--- a/ThirdWeek/Base.lproj/Main.storyboard
+++ b/ThirdWeek/Base.lproj/Main.storyboard
@@ -181,14 +181,13 @@
         <!--Sample Collection View Controller-->
         <scene sceneID="Cwj-s1-Ich">
             <objects>
-                <viewController storyboardIdentifier="sampleCollectionViewController" id="dZx-D7-GOd" customClass="sampleCollectionViewController" customModule="ThirdWeek" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="sampleCollectionViewController" id="dZx-D7-GOd" customClass="SampleCollectionViewController" customModule="ThirdWeek" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="41l-OO-leU">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0bh-n8-6D5">
-                                <rect key="frame" x="76" y="198" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0bh-n8-6D5">
+                                <rect key="frame" x="0.0" y="59" width="393" height="355"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2oi-5M-IMS">
                                     <size key="itemSize" width="128" height="128"/>
@@ -197,11 +196,11 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="zul-Be-7zb">
-                                        <rect key="frame" x="56" y="0.0" width="128" height="128"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="zul-Be-7zb">
+                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6Z6-d9-Kv8">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
@@ -210,6 +209,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="P95-YU-0cI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="0bh-n8-6D5" firstAttribute="top" secondItem="P95-YU-0cI" secondAttribute="top" id="64g-XU-VJf"/>
+                            <constraint firstItem="0bh-n8-6D5" firstAttribute="leading" secondItem="P95-YU-0cI" secondAttribute="leading" id="BBZ-FP-JuX"/>
+                            <constraint firstItem="P95-YU-0cI" firstAttribute="trailing" secondItem="0bh-n8-6D5" secondAttribute="trailing" id="V5y-6b-DHS"/>
+                            <constraint firstItem="0bh-n8-6D5" firstAttribute="bottom" secondItem="P95-YU-0cI" secondAttribute="bottom" constant="-404" id="mmM-Px-tSd"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="bannerCollectionView" destination="0bh-n8-6D5" id="qaQ-1l-8Ld"/>
@@ -217,7 +222,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rlo-c3-4ke" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-69" y="125"/>
+            <point key="canvasLocation" x="-69.465648854961827" y="124.64788732394366"/>
         </scene>
     </scenes>
     <resources>
