--- a/ThirdWeek/TestChatTableViewCell.xib
+++ b/ThirdWeek/TestChatTableViewCell.xib
@@ -16,6 +16,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="377" height="171"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ug1-7b-pHN">
+                        <rect key="frame" x="60" y="33" width="211" height="134"/>
+                    </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="n61-ec-rX1">
                         <rect key="frame" x="8" y="8" width="44" height="44"/>
                         <constraints>
@@ -33,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88:88 오전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSz-bK-EuL">
-                        <rect key="frame" x="274.66666666666669" y="147" width="60" height="16"/>
+                        <rect key="frame" x="275" y="147" width="60" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="1p5-qq-BIG"/>
                             <constraint firstAttribute="width" constant="60" id="Xmf-b0-wcG"/>
@@ -43,7 +46,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4IL-BU-Cju">
-                        <rect key="frame" x="59.999999999999986" y="37" width="206.66666666666663" height="126"/>
+                        <rect key="frame" x="64" y="37" width="203" height="126"/>
                         <string key="text">LabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabelLabel</string>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -51,11 +54,15 @@
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="4IL-BU-Cju" firstAttribute="trailing" secondItem="ug1-7b-pHN" secondAttribute="trailing" constant="-4" id="0Vk-y6-EUq"/>
                     <constraint firstItem="n61-ec-rX1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="3Ub-jo-3OL"/>
+                    <constraint firstItem="4IL-BU-Cju" firstAttribute="top" secondItem="ug1-7b-pHN" secondAttribute="top" constant="4" id="5RS-jd-Nfz"/>
+                    <constraint firstItem="4IL-BU-Cju" firstAttribute="bottom" secondItem="ug1-7b-pHN" secondAttribute="bottom" constant="-4" id="8UO-bJ-VGp"/>
+                    <constraint firstItem="4IL-BU-Cju" firstAttribute="leading" secondItem="ug1-7b-pHN" secondAttribute="leading" constant="4" id="8nF-5I-POX"/>
                     <constraint firstAttribute="bottom" secondItem="wSz-bK-EuL" secondAttribute="bottom" constant="8" id="DS0-ig-G3u"/>
                     <constraint firstItem="4K0-qb-op7" firstAttribute="leading" secondItem="n61-ec-rX1" secondAttribute="trailing" constant="8" id="F8u-1A-dHq"/>
                     <constraint firstItem="4K0-qb-op7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="MVp-yw-SXT"/>
-                    <constraint firstItem="4IL-BU-Cju" firstAttribute="leading" secondItem="n61-ec-rX1" secondAttribute="trailing" constant="8" id="Q1V-Xd-nSs"/>
+                    <constraint firstItem="4IL-BU-Cju" firstAttribute="leading" secondItem="n61-ec-rX1" secondAttribute="trailing" constant="12" id="Q1V-Xd-nSs"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="wSz-bK-EuL" secondAttribute="trailing" constant="40" id="QpW-gB-Oan"/>
                     <constraint firstAttribute="trailing" secondItem="4K0-qb-op7" secondAttribute="trailing" constant="40" id="RkZ-yX-ZV2"/>
                     <constraint firstItem="wSz-bK-EuL" firstAttribute="leading" secondItem="4IL-BU-Cju" secondAttribute="trailing" constant="8" id="VNE-Kn-cqc"/>
